adding points controller
